infrastructure/bootstrap/infrastructure/keycloak/controller/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: rig-system
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
